<resources>
    <string name="app_name">BallActivity</string>
    <string name="teama">TeamA</string>
    <string name="teamb">TeamB</string>
    <string name="point3">+3 points</string>
    <string name="point2">+2 points</string>
    <string name="point1">+1 point</string>
    <string name="reset">reset</string>
    <string name="id_name">input id</string>
    <string name="psd_name">password</string>
    <string name="remember_psd">remember pwd</string>
    <string name="find_psd">find pwd</string>
    <string name="login">login</string>
    <string name="menu_setting">setting</string>
</resources>
