<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="462dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/teama"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/teama"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/score1"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="60dp" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="24dp"
                    android:background="@color/purple_200"
                    android:onClick="click"
                    android:text="@string/point3" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="24dp"
                    android:background="@color/purple_200"
                    android:onClick="click"
                    android:text="@string/point2" />

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="24dp"
                    android:background="@color/purple_200"
                    android:onClick="click"
                    android:text="@string/point1" />

            </LinearLayout>

            <TextView
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@color/purple_200" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/teamb"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/teamb"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/score2"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="60dp" />

                <Button
                    android:id="@+id/btnb3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="24dp"
                    android:background="@color/purple_200"
                    android:onClick="clickb"
                    android:text="@string/point3" />

                <Button
                    android:id="@+id/btnb2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="24dp"
                    android:background="@color/purple_200"
                    android:onClick="clickb"
                    android:text="@string/point2" />

                <Button
                    android:id="@+id/btnb1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="24dp"
                    android:background="@color/purple_200"
                    android:onClick="clickb"
                    android:text="@string/point1" />

            </LinearLayout>




        </LinearLayout>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_margin="60dp"
            android:background="@color/purple_200"
            android:gravity="center"
            android:onClick="click"
            android:text="@string/reset" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>